Resolves: tdf#101798 ResetClipRegion needs to affect cairo drawing too

regression since...

commit cb382034b061b4acd4f0fd490f42af34517a7b8d
Date:   Fri Jul 1 14:00:00 2016 +0200

    tdf#50613 speedup fat line drawing on linux using cairo

Change-Id: I2f1a70f102786228d52199df9960336218c6f9f9
Reviewed-on: https://gerrit.libreoffice.org/55182
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit 77230756187d8642f08e6b4bb937d279f3483533)